--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -4,3 +4,5 @@
 @import './button.scss';
 @import './navigation.scss';
 @import './portfolio.scss';
+@import './auth.scss';
+@import './login.scss';
