--- a/src/style/navigation.scss
+++ b/src/style/navigation.scss
@@ -32,8 +32,26 @@
             border-bottom: 1px solid black;
             color: black;
 
-        }
+        }    
     }
+
+    .right-side {
+        float: right;
+        margin-right: 20px;
+        font-size: 0.8rem;
+        color: $grey;
+    
+        .sign-out {
+            color: black;
+            text-decoration: none;
+            font-size: 0.8rem;
+            margin-left: 10px;
+            &:hover {
+                color: black;
+                text-decoration: underline;
+            }
+        }
+    } 
    
 
 }
