--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,6 +1,7 @@
 @import './variables.scss';
 @import './mixins.scss';
 @import './base.scss';
+@import './forms.scss';
 @import './button.scss';
 @import './navigation.scss';
 @import './portfolio.scss';
@@ -8,3 +9,4 @@
 @import './login.scss';
 @import './portfolio-manager.scss';
 @import './portfolio-sidebar.scss';
+@import './portfolio-form.scss';
