--- a/src/style/portfolio-sidebar.scss
+++ b/src/style/portfolio-sidebar.scss
@@ -6,8 +6,25 @@
             width: 100%;
         }
 
-        .title {
-            color: $offwhite;
+        .text-content {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            .title {
+                color: $offwhite;
+                font-size: 1.5em;
+            }
+
+            .delete-icon {
+                cursor: pointer;
+                color: $offwhite;
+                font-size: 1.5em;
+                transition: 0.3s ease-in-out;
+                &:hover {
+                    color: $warning;
+                    transition: 0.3s ease-in-out;
+                }
+            }
         }
     }
 }
