--- a/src/style/navigation.scss
+++ b/src/style/navigation.scss
@@ -41,14 +41,14 @@
         font-size: 0.8rem;
         color: $grey;
     
-        .sign-out {
-            color: black;
-            text-decoration: none;
-            font-size: 0.8rem;
-            margin-left: 10px;
+        a {
+            margin-left: 15px;
+            cursor: pointer;
+            color: $teal;
+            transition: 0.3s ease-in-out;
+
             &:hover {
-                color: black;
-                text-decoration: underline;
+                color: $darkteal;
             }
         }
     } 
