--- a/src/style/portfolio-sidebar.scss
+++ b/src/style/portfolio-sidebar.scss
@@ -15,16 +15,25 @@
                 font-size: 1.5em;
             }
 
-            .delete-icon {
-                cursor: pointer;
-                color: $offwhite;
-                font-size: 1.5em;
-                transition: 0.3s ease-in-out;
-                &:hover {
-                    color: $warning;
+            .actions {
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
+                grid-gap: 15px;
+
+                
+                .action-icon {
+                    cursor: pointer;
+                    color: $offwhite;
+                    font-size: 1.5em;
                     transition: 0.3s ease-in-out;
-                }
+                    &:hover {
+                        color: $warning;
+                        transition: 0.3s ease-in-out;
+                    }
+                }    
             }
+
+            
         }
     }
 }
