--- a/src/style/portfolio-form.scss
+++ b/src/style/portfolio-form.scss
@@ -12,5 +12,24 @@
         @include base-grid();
         grid-template-columns: 200px 200px 200px;
         
+        .portfolio-manager-image-wrapper {
+            img {
+                width: 100%;
+                height: 150px;
+                object-fit: cover;
+                border-radius: 5px;
+            }
+
+            .image-removal-link {
+                display: flex;
+                justify-content: center;
+
+                a {
+                    font-weight: 700;
+                    color: $warning;
+                    cursor: pointer;
+                }
+            }
+        }
     }
 }
