--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -11,3 +11,4 @@
 @import './portfolio-manager.scss';
 @import './portfolio-sidebar.scss';
 @import './portfolio-form.scss';
+@import './blog.scss';
