--- a/src/style/blog-form.scss
+++ b/src/style/blog-form.scss
@@ -7,4 +7,9 @@
     input {
         margin-bottom: 0px;
     }
+
+    .image-upload-wrapper {
+        @include base-grid();
+        grid-template-columns: 200px;
+    }
 }
