filter fixed and portfolio-details added

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -7,11 +7,13 @@
 @import './navigation.scss';
 @import './layouts.scss';
 @import './portfolio.scss';
+@import './home.scss';
 @import './auth.scss';
 @import './login.scss';
 @import './portfolio-manager.scss';
 @import './portfolio-sidebar.scss';
 @import './portfolio-form.scss';
+@import './portfolio-details.scss';
 @import './blog.scss';
 @import './loaders.scss';
 @import './blog-form.scss'; 
