auth styles finished

--- a/src/style/auth.scss
+++ b/src/style/auth.scss
@@ -13,5 +13,23 @@
         align-items: center;
         background-color: $offwhite;
         color: $blue;
+
+        .auth-form-wrapper {
+            @include input-element();
+            @include base-grid();
+            grid-gap: 21px;
+            padding: 42px;
+
+            .from-group {
+                display: flex;
+
+                svg {
+                    font-size: 2em;
+                    color: $teal;
+                    margin-right: 15px;
+                }
+                
+            }
+        }
     }
 }
